--- a/Fitness Site/fitness.css
+++ b/Fitness Site/fitness.css
@@ -48,6 +48,20 @@ nav ul li a {
     text-decoration: none;
 }
 
+.main-site a {
+    background-color: grey;
+    padding: 10px;
+    margin-top: 10px;
+    text-align: center;
+    border-radius: 5px;
+    color: blue;
+}
+
+.main-site a:hover {
+    background-color: green;
+    color: white;
+}
+
 .button {
     display: inline-block;
     background-color: #969595;
